--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pon-doc",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Document parser for pon",
   "main": "lib",
   "browser": "shim/browser",
@@ -23,24 +23,23 @@
   },
   "homepage": "https://github.com/realglobe-Inc/pon-doc#readme",
   "dependencies": {
-    "ape-doc": "^2.0.4",
-    "co": "^4.6.0"
+    "ape-doc": "^2.0.4"
   },
   "devDependencies": {
     "ababel": "^2.0.1",
     "ababel-es2015": "^2.0.1",
-    "amocha": "^2.0.0",
+    "amocha": "^3.0.0",
     "ape-formatting": "^1.0.2",
     "ape-releasing": "^4.0.4",
     "ape-tasking": "^4.0.9",
-    "ape-tmpl": "^5.0.20",
+    "ape-tmpl": "^6.0.1",
     "ape-updating": "^4.1.0",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
     "sugos-travis": "^2.0.7"
   },
   "engines": {
-    "node": ">=6",
+    "node": ">=7.6",
     "npm": ">=4"
   }
 }
